--- a/_config.yml
+++ b/_config.yml
@@ -22,22 +22,22 @@ repository               : "AnnaMargaretheLimbach/AnnaMargaretheLimbach.github.i
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Anna Margarethe Limbach"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Prague, Czech Republic"
+  employer         : "Czech Academy of Sciences"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "limbach@cs.cas.cz" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=9R7ZfWAAAAAJ&hl=cs&oi=sra"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "http://orcid.org/0000-0002-3606-153X"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  researchgate     : "https://www.researchgate.net/profile/Anna-Limbach-2"
   scopus           : # URL
 
   # Repositories and software development
