--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "AnnaMargaretheLimbach/AnnaMargaretheLimbach.github.i
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Anna Margarethe Limbach"
+  name             : "Dr. Anna Margarethe Limbach"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
   location         : "Prague, Czech Republic"
