--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Dr. Anna Margarethe Limbach"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "I'm a combinatorialist from Aachen(Germany), currenty in Prague."
   location         : "Prague, Czech Republic"
   employer         : "Czech Academy of Sciences"
   uri              : # URL
