--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,9 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "I'm a reasearch mathematician working in the field of combinatorics."
   location         : "Prague, Czech Republic"
-  employer         : "Czech Academy of Sciences"
+  employer         : "Charles University"
   uri              : # URL
-  email            : "limbach@cs.cas.cz" 
+  email            : "limbach@iuuk.mff.cuni.cz" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
